--- a/package.json
+++ b/package.json
@@ -6,26 +6,29 @@
   "author": "Rohit Gupta <rohitguptab33@gmail.com>",
   "dependencies": {
     "bootstrap": "^4.4.1",
-    "disqus-react": "^1.0.7",
     "dotenv": "^8.2.0",
-    "gatsby": "^2.19.7",
-    "gatsby-image": "^2.2.39",
-    "gatsby-plugin-manifest": "^2.2.39",
-    "gatsby-plugin-offline": "^3.0.32",
-    "gatsby-plugin-react-helmet": "^3.1.21",
-    "gatsby-plugin-sharp": "^2.4.3",
-    "gatsby-source-contentful": "^2.1.86",
-    "gatsby-source-filesystem": "^2.1.46",
-    "gatsby-transformer-remark": "^2.6.52",
-    "gatsby-transformer-sharp": "^2.3.13",
+    "gatsby": "^5.14.1",
+    "gatsby-image": "^3.11.0",
+    "gatsby-plugin-image": "^3.14.0",
+    "gatsby-plugin-manifest": "^5.14.0",
+    "gatsby-plugin-offline": "^6.14.0",
+    "gatsby-plugin-react-helmet": "^6.14.0",
+    "gatsby-plugin-sharp": "^5.14.0",
+    "gatsby-source-contentful": "^8.15.0",
+    "gatsby-source-filesystem": "^5.14.0",
+    "gatsby-transformer-remark": "^6.14.0",
+    "gatsby-transformer-sharp": "^5.14.0",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-helmet": "^5.2.1",
+    "react-helmet-async": "^2.0.5",
     "react-share": "^4.0.1",
-    "react-slick": "^0.25.2",
-    "smooth-scroll": "^16.1.2"
+    "react-slick": "^0.30.3",
+    "slick-carousel": "^1.8.1",
+    "smooth-scroll": "^16.1.2",
+    "utterances-react": "^0.1.3"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
