--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-source-filesystem": "^3.15.0",
     "gatsby-transformer-remark": "^4.12.0",
     "gatsby-transformer-sharp": "^3.15.0",
+    "graphql": "^16.10.0",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
